--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "connect-ensure-login": "^0.1.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "firebase": "^10.5.2",
+    "firebase-admin": "^11.11.0",
     "moment": "^2.29.4",
     "mongoose": "^6.12.2",
     "multer": "^1.4.5-lts.1",
