--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-css": "postcss src/styles.css -o public/styles.css"
   },
   "author": "Odong Martin",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.16",
     "body-parser": "^1.20.2",
     "connect-ensure-login": "^0.1.1",
     "dotenv": "^16.3.1",
@@ -19,6 +20,9 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "pug": "^3.0.2"
+    "postcss": "^8.4.31",
+    "postcss-cli": "^10.1.0",
+    "pug": "^3.0.2",
+    "tailwindcss": "^3.3.5"
   }
 }
